--- a/Julia set.ipynb
+++ b/Julia set.ipynb
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "f0ff4cca",
    "metadata": {},
    "outputs": [],
@@ -327,7 +327,7 @@
     "plt.figure(figsize=(image_dim/my_dpi, image_dim/my_dpi), dpi=my_dpi)\n",
     "numcheck = 0\n",
     "\n",
-    "for c in mandel_list_copy[2:142]:\n",
+    "for c in mandel_list_copy[2:]:\n",
     "  \n",
     "    plot_Mat = np.tile(colors[-1], (image_dim, image_dim, 1))\n",
     "    R = (1 + np.sqrt(1 + 4*np.abs(c)))/2\n",
@@ -383,21 +383,300 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "551f03c2",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed 1 out of 264 images\n",
+      "Processed 2 out of 264 images\n",
+      "Processed 3 out of 264 images\n",
+      "Processed 4 out of 264 images\n",
+      "Processed 5 out of 264 images\n",
+      "Processed 6 out of 264 images\n",
+      "Processed 7 out of 264 images\n",
+      "Processed 8 out of 264 images\n",
+      "Processed 9 out of 264 images\n",
+      "Processed 10 out of 264 images\n",
+      "Processed 11 out of 264 images\n",
+      "Processed 12 out of 264 images\n",
+      "Processed 13 out of 264 images\n",
+      "Processed 14 out of 264 images\n",
+      "Processed 15 out of 264 images\n",
+      "Processed 16 out of 264 images\n",
+      "Processed 17 out of 264 images\n",
+      "Processed 18 out of 264 images\n",
+      "Processed 19 out of 264 images\n",
+      "Processed 20 out of 264 images\n",
+      "Processed 21 out of 264 images\n",
+      "Processed 22 out of 264 images\n",
+      "Processed 23 out of 264 images\n",
+      "Processed 24 out of 264 images\n",
+      "Processed 25 out of 264 images\n",
+      "Processed 26 out of 264 images\n",
+      "Processed 27 out of 264 images\n",
+      "Processed 28 out of 264 images\n",
+      "Processed 29 out of 264 images\n",
+      "Processed 30 out of 264 images\n",
+      "Processed 31 out of 264 images\n",
+      "Processed 32 out of 264 images\n",
+      "Processed 33 out of 264 images\n",
+      "Processed 34 out of 264 images\n",
+      "Processed 35 out of 264 images\n",
+      "Processed 36 out of 264 images\n",
+      "Processed 37 out of 264 images\n",
+      "Processed 38 out of 264 images\n",
+      "Processed 39 out of 264 images\n",
+      "Processed 40 out of 264 images\n",
+      "Processed 41 out of 264 images\n",
+      "Processed 42 out of 264 images\n",
+      "Processed 43 out of 264 images\n",
+      "Processed 44 out of 264 images\n",
+      "Processed 45 out of 264 images\n",
+      "Processed 46 out of 264 images\n",
+      "Processed 47 out of 264 images\n",
+      "Processed 48 out of 264 images\n",
+      "Processed 49 out of 264 images\n",
+      "Processed 50 out of 264 images\n",
+      "Processed 51 out of 264 images\n",
+      "Processed 52 out of 264 images\n",
+      "Processed 53 out of 264 images\n",
+      "Processed 54 out of 264 images\n",
+      "Processed 55 out of 264 images\n",
+      "Processed 56 out of 264 images\n",
+      "Processed 57 out of 264 images\n",
+      "Processed 58 out of 264 images\n",
+      "Processed 59 out of 264 images\n",
+      "Processed 60 out of 264 images\n",
+      "Processed 61 out of 264 images\n",
+      "Processed 62 out of 264 images\n",
+      "Processed 63 out of 264 images\n",
+      "Processed 64 out of 264 images\n",
+      "Processed 65 out of 264 images\n",
+      "Processed 66 out of 264 images\n",
+      "Processed 67 out of 264 images\n",
+      "Processed 68 out of 264 images\n",
+      "Processed 69 out of 264 images\n",
+      "Processed 70 out of 264 images\n",
+      "Processed 71 out of 264 images\n",
+      "Processed 72 out of 264 images\n",
+      "Processed 73 out of 264 images\n",
+      "Processed 74 out of 264 images\n",
+      "Processed 75 out of 264 images\n",
+      "Processed 76 out of 264 images\n",
+      "Processed 77 out of 264 images\n",
+      "Processed 78 out of 264 images\n",
+      "Processed 79 out of 264 images\n",
+      "Processed 80 out of 264 images\n",
+      "Processed 81 out of 264 images\n",
+      "Processed 82 out of 264 images\n",
+      "Processed 83 out of 264 images\n",
+      "Processed 84 out of 264 images\n",
+      "Processed 85 out of 264 images\n",
+      "Processed 86 out of 264 images\n",
+      "Processed 87 out of 264 images\n",
+      "Processed 88 out of 264 images\n",
+      "Processed 89 out of 264 images\n",
+      "Processed 90 out of 264 images\n",
+      "Processed 91 out of 264 images\n",
+      "Processed 92 out of 264 images\n",
+      "Processed 93 out of 264 images\n",
+      "Processed 94 out of 264 images\n",
+      "Processed 95 out of 264 images\n",
+      "Processed 96 out of 264 images\n",
+      "Processed 97 out of 264 images\n",
+      "Processed 98 out of 264 images\n",
+      "Processed 99 out of 264 images\n",
+      "Processed 100 out of 264 images\n",
+      "Processed 101 out of 264 images\n",
+      "Processed 102 out of 264 images\n",
+      "Processed 103 out of 264 images\n",
+      "Processed 104 out of 264 images\n",
+      "Processed 105 out of 264 images\n",
+      "Processed 106 out of 264 images\n",
+      "Processed 107 out of 264 images\n",
+      "Processed 108 out of 264 images\n",
+      "Processed 109 out of 264 images\n",
+      "Processed 110 out of 264 images\n",
+      "Processed 111 out of 264 images\n",
+      "Processed 112 out of 264 images\n",
+      "Processed 113 out of 264 images\n",
+      "Processed 114 out of 264 images\n",
+      "Processed 115 out of 264 images\n",
+      "Processed 116 out of 264 images\n",
+      "Processed 117 out of 264 images\n",
+      "Processed 118 out of 264 images\n",
+      "Processed 119 out of 264 images\n",
+      "Processed 120 out of 264 images\n",
+      "Processed 121 out of 264 images\n",
+      "Processed 122 out of 264 images\n",
+      "Processed 123 out of 264 images\n",
+      "Processed 124 out of 264 images\n",
+      "Processed 125 out of 264 images\n",
+      "Processed 126 out of 264 images\n",
+      "Processed 127 out of 264 images\n",
+      "Processed 128 out of 264 images\n",
+      "Processed 129 out of 264 images\n",
+      "Processed 130 out of 264 images\n",
+      "Processed 131 out of 264 images\n",
+      "Processed 132 out of 264 images\n",
+      "Processed 133 out of 264 images\n",
+      "Processed 134 out of 264 images\n",
+      "Processed 135 out of 264 images\n",
+      "Processed 136 out of 264 images\n",
+      "Processed 137 out of 264 images\n",
+      "Processed 138 out of 264 images\n",
+      "Processed 139 out of 264 images\n",
+      "Processed 140 out of 264 images\n",
+      "Processed 141 out of 264 images\n",
+      "Processed 142 out of 264 images\n",
+      "Processed 143 out of 264 images\n",
+      "Processed 144 out of 264 images\n",
+      "Processed 145 out of 264 images\n",
+      "Processed 146 out of 264 images\n",
+      "Processed 147 out of 264 images\n",
+      "Processed 148 out of 264 images\n",
+      "Processed 149 out of 264 images\n",
+      "Processed 150 out of 264 images\n",
+      "Processed 151 out of 264 images\n",
+      "Processed 152 out of 264 images\n",
+      "Processed 153 out of 264 images\n",
+      "Processed 154 out of 264 images\n",
+      "Processed 155 out of 264 images\n",
+      "Processed 156 out of 264 images\n",
+      "Processed 157 out of 264 images\n",
+      "Processed 158 out of 264 images\n",
+      "Processed 159 out of 264 images\n",
+      "Processed 160 out of 264 images\n",
+      "Processed 161 out of 264 images\n",
+      "Processed 162 out of 264 images\n",
+      "Processed 163 out of 264 images\n",
+      "Processed 164 out of 264 images\n",
+      "Processed 165 out of 264 images\n",
+      "Processed 166 out of 264 images\n",
+      "Processed 167 out of 264 images\n",
+      "Processed 168 out of 264 images\n",
+      "Processed 169 out of 264 images\n",
+      "Processed 170 out of 264 images\n",
+      "Processed 171 out of 264 images\n",
+      "Processed 172 out of 264 images\n",
+      "Processed 173 out of 264 images\n",
+      "Processed 174 out of 264 images\n",
+      "Processed 175 out of 264 images\n",
+      "Processed 176 out of 264 images\n",
+      "Processed 177 out of 264 images\n",
+      "Processed 178 out of 264 images\n",
+      "Processed 179 out of 264 images\n",
+      "Processed 180 out of 264 images\n",
+      "Processed 181 out of 264 images\n",
+      "Processed 182 out of 264 images\n",
+      "Processed 183 out of 264 images\n",
+      "Processed 184 out of 264 images\n",
+      "Processed 185 out of 264 images\n",
+      "Processed 186 out of 264 images\n",
+      "Processed 187 out of 264 images\n",
+      "Processed 188 out of 264 images\n",
+      "Processed 189 out of 264 images\n",
+      "Processed 190 out of 264 images\n",
+      "Processed 191 out of 264 images\n",
+      "Processed 192 out of 264 images\n",
+      "Processed 193 out of 264 images\n",
+      "Processed 194 out of 264 images\n",
+      "Processed 195 out of 264 images\n",
+      "Processed 196 out of 264 images\n",
+      "Processed 197 out of 264 images\n",
+      "Processed 198 out of 264 images\n",
+      "Processed 199 out of 264 images\n",
+      "Processed 200 out of 264 images\n",
+      "Processed 201 out of 264 images\n",
+      "Processed 202 out of 264 images\n",
+      "Processed 203 out of 264 images\n",
+      "Processed 204 out of 264 images\n",
+      "Processed 205 out of 264 images\n",
+      "Processed 206 out of 264 images\n",
+      "Processed 207 out of 264 images\n",
+      "Processed 208 out of 264 images\n",
+      "Processed 209 out of 264 images\n",
+      "Processed 210 out of 264 images\n",
+      "Processed 211 out of 264 images\n",
+      "Processed 212 out of 264 images\n",
+      "Processed 213 out of 264 images\n",
+      "Processed 214 out of 264 images\n",
+      "Processed 215 out of 264 images\n",
+      "Processed 216 out of 264 images\n",
+      "Processed 217 out of 264 images\n",
+      "Processed 218 out of 264 images\n",
+      "Processed 219 out of 264 images\n",
+      "Processed 220 out of 264 images\n",
+      "Processed 221 out of 264 images\n",
+      "Processed 222 out of 264 images\n",
+      "Processed 223 out of 264 images\n",
+      "Processed 224 out of 264 images\n",
+      "Processed 225 out of 264 images\n",
+      "Processed 226 out of 264 images\n",
+      "Processed 227 out of 264 images\n",
+      "Processed 228 out of 264 images\n",
+      "Processed 229 out of 264 images\n",
+      "Processed 230 out of 264 images\n",
+      "Processed 231 out of 264 images\n",
+      "Processed 232 out of 264 images\n",
+      "Processed 233 out of 264 images\n",
+      "Processed 234 out of 264 images\n",
+      "Processed 235 out of 264 images\n",
+      "Processed 236 out of 264 images\n",
+      "Processed 237 out of 264 images\n",
+      "Processed 238 out of 264 images\n",
+      "Processed 239 out of 264 images\n",
+      "Processed 240 out of 264 images\n",
+      "Processed 241 out of 264 images\n",
+      "Processed 242 out of 264 images\n",
+      "Processed 243 out of 264 images\n",
+      "Processed 244 out of 264 images\n",
+      "Processed 245 out of 264 images\n",
+      "Processed 246 out of 264 images\n",
+      "Processed 247 out of 264 images\n",
+      "Processed 248 out of 264 images\n",
+      "Processed 249 out of 264 images\n",
+      "Processed 250 out of 264 images\n",
+      "Processed 251 out of 264 images\n",
+      "Processed 252 out of 264 images\n",
+      "Processed 253 out of 264 images\n",
+      "Processed 254 out of 264 images\n",
+      "Processed 255 out of 264 images\n",
+      "Processed 256 out of 264 images\n",
+      "Processed 257 out of 264 images\n",
+      "Processed 258 out of 264 images\n",
+      "Processed 259 out of 264 images\n",
+      "Processed 260 out of 264 images\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed 261 out of 264 images\n",
+      "Processed 262 out of 264 images\n",
+      "Processed 263 out of 264 images\n",
+      "Processed 264 out of 264 images\n",
+      "finished calculating structural similarity\n"
+     ]
+    }
+   ],
    "source": [
     "# save the structural similarity index between each pair of images\n",
     "# for 266 images, this will write 266*266 values\n",
     "\n",
     "import skimage as ski\n",
-    "nimages = len(mandel_list_copy)-2\n",
+    "nimages = len(mandel_list_copy)\n",
     "\n",
     "with open(\"bin/data/julia_image_similarities.txt\", \"a+\") as f:\n",
     "    \n",
-    "    for i in range(47, nimages+1):\n",
-    "        \n",
+    "    for i in range(1,nimages+1):\n",
     "        img1 = ski.io.imread('bin/data/Figures/' + str(i) + '.png')\n",
     "        img1 = img1[:,:,0]\n",
     "        for j in range(1,nimages+1):\n",
@@ -405,6 +684,7 @@
     "            img2 = img2[:,:,0]\n",
     "            ssim = ski.metrics.structural_similarity(img1, img2, win_size=101)\n",
     "            f.write(str(ssim) + '\\t')\n",
+    "\n",
     "            \n",
     "        f.write('\\n')\n",
     "        print('Processed '+ str(i) + ' out of ' + str(nimages) + ' images' )\n",
@@ -412,14 +692,6 @@
     "print (\"finished calculating structural similarity\")\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef3374ee",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
